libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__check_migration_perms-2.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: "conn.execute(\"create table test (x)\", ()).await.unwrap()"
---
0
