libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__conflicting_data_migration-4.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: resp
---
{
  "job_id": 3,
  "status": "RunFailure",
  "error": "task 3 for namespace `ns1` failed with error: An error occured executing the migration at step 1: UNIQUE constraint failed: test.c",
  "progress": [
    {
      "namespace": "ns1",
      "status": "RunFailure",
      "error": "aborted"
    }
  ]
}
