libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__disable_ddl.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: "conn.execute(\"create table test (x)\", ()).await.unwrap_err()"
snapshot_kind: text
---
Hrana(
    Api(
        "status=403 Forbidden, body={\"error\":\"Authorization forbidden: DDL statements not permitted on namespace ns1\"}",
    ),
)
