libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__migration_contains_txn_statements-2.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: resp.json_value().await.unwrap()
---
Object {
    "error": String("couldn't find requested migration job"),
}
